--- a/backend/.env
+++ b/backend/.env
@@ -1,11 +1,11 @@
 # ============ AI API Keys ============
 # 至少配置一个即可使用
-OPENAI_API_KEY=sk-2KNvBpW72AMX3QLCNVt9r8FTbMaRSEQkFgwXu7iEh9xX1ZNn
-OPENAI_BASE_URL=https://api.gueai.com/v1
+OPENAI_API_KEY=sk-123123123
+OPENAI_BASE_URL=https://api.openai.com/v1
 
-ANTHROPIC_API_KEY=sk-2KNvBpW72AMX3QLCNVt9r8FTbMaRSEQkFgwXu7iEh9xX1ZNn
+ANTHROPIC_API_KEY=sk-123123123
 
-DEEPSEEK_API_KEY=sk-83c7f2a8a2194264b1dfe13fa5d241a7
+DEEPSEEK_API_KEY=sk-123123
 DEEPSEEK_BASE_URL=https://api.deepseek.com/v1
 
 # 默认使用的模型: openai / claude / deepseek
