--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,15 +14,15 @@ python-multipart==0.0.6
 # AI Clients
 openai==1.12.0
 anthropic==0.18.0
-aiohttp==3.9.0
+aiohttp>=3.12.0,<4
 httpx==0.26.0
 
 # Image Processing
-Pillow==10.2.0
+Pillow>=11.0.0,<12
 
 # Environment
 python-dotenv==1.0.0
 
 # Validation
-pydantic==2.6.0
-pydantic-settings==2.1.0
+pydantic>=2.8.0,<3
+pydantic-settings>=2.3.0,<3
